--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@ input[type="number"] {
 
 .btn {
   cursor: pointer;
-  background-color: #9c88ff;
+  background-color: #3016af;
   box-shadow: var(--box-shadow);
   color: #fff;
   border: 0;
